--- a/sass/sass-partials/page-specific/_people.scss
+++ b/sass/sass-partials/page-specific/_people.scss
@@ -84,14 +84,14 @@ div.directory .row {
     }
 
     .people #page-content {
-        margin-top: 200px;
+        //margin-top: 200px;
     }
 
     .people #sidebar {
-        float: none;
-        position: absolute;
-        top: 30px;
-        left: 0;
+        //float: none;
+        //position: absolute;
+        //top: 30px;
+        //left: 0;
         margin-top: 0;
     }
 
